// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonRenderer renderTextBox should render a text box when schema contains required attribute set to true 1`] = `
<div>
  
    
  <div
    class="form-group"
  >
    
      
    <label
      class="required-label"
      for="device1"
    >
      Device Name
    </label>
    
      
    <input
      class="form-control"
      id="device1"
      placeholder="Enter the device name"
      required="true"
      type="text"
    />
    
    
  </div>
</div>
`;

exports[`CommonRenderer renderTextBox should render a text box without required attribute when schema does not contain required attribute 1`] = `
<div>
  
    
  <div
    class="form-group"
  >
    
      
    <label
      class=""
      for="device1"
    >
      Device Name
    </label>
    
      
    <input
      class="form-control"
      id="device1"
      placeholder="Enter the device name"
      required="false"
      type="text"
    />
    
    
  </div>
</div>
`;
